<resources>
    <string name="app_name">Maleta Virtual</string>
    <string name="product_create">Nueva Maleta</string>
    <string name="product_msg_loading">Unos segundos ...</string>
    <string name="open_drawer">Open</string>
    <string name="hint_full_name">nombre completo</string>
    <string name="profile_update">Actualizar</string>
    <string name="close_drawer">Close</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_viaje">Fecha Viaje</string>
    <string name="anadir_articulo">Añadir Artículo</string>
    <string name="cerrar_maleta">Cerrar Maleta</string>
    <string name="duplicar_maleta">Duplicar Maleta</string>
    <string name="subiendo">Subiendo... 75%</string>
    <string name="camara">Camara</string>
    <string name="maletas_activas">Maletas Activas</string>
    <string name="maletas_cerradas">Maletas Cerradas</string>
    <string name="cuenta_personal">Cuenta Personal</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="nombre_de_la_maleta">Nombre de la maleta</string>
    <string name="fecha_de_viaje">Fecha de Viaje</string>
    <string name="nombre_del_articulo">Nombre del artículo</string>
    <string name="cantidad">Cantidad</string>
    <string name="comprobado">Comprobado</string>
    <string name="maleta_virtual">MALETA VIRTUAL</string>
    <string name="email">EMAIL</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="terminos">Terminos y condiciones</string>
    <string name="fallo_subir_foto">Fallo al subir la foto</string>
    <string name="error_subir_imagen">Error al subir imagen</string>
    <string name="necesario_nombre_cantidad">Debe introducir cantidad y nombre antes de hacer la foto</string>
    <string name="articulo_anadido_correcto">Artículo añadido correctamente</string>
    <string name="error_anadir_articulo">Error al añadir el artículo</string>
    <string name="articulo_actualizado">Artículo actualizado</string>
    <string name="error_actualizar_articulo">Error al actualizar el artículo</string>
    <string name="maleta_duplicada_ok">Maleta duplicada correctamente</string>
    <string name="duplicar_maleta_error">Error al duplicar la maleta</string>
    <string name="maleta_actualizada_ok">Maleta actualizada</string>
    <string name="maleta_actualizar_error">Error al actualizar la maleta</string>
    <string name="maleta_anadida_ok">Maleta añadida correctamente</string>
    <string name="maleta_anadir_error">Error al añadir la maleta</string>
    <string name="error_consultar_datos">Error al consultar datos</string>
    <string name="error_eliminar">Error al eliminar</string>
    <string name="eliminar_articulo_pregunta">Eliminar articulo?</string>
    <string name="advertencia_eliminar_articulo">El artículo se eliminará permanentemente</string>
    <string name="confirmar">Confirmar</string>
    <string name="eliminar_registro_error">Error al eliminar registro</string>
    <string name="cerrar_maleta_pregunta">Cerrar Maleta?</string>
    <string name="maleta_cerrar_advertencia">La maleta se cerrará y ya no podrá modificar su contenido</string>
    <string name="maleta_cerrar_correcto">Maleta Cerrada correctamente!</string>
    <string name="maleta_duplicar_pendiente">Duplicar maleta pendiente activar ...</string>
    <string name="usuario_actualizado">Usuario Actualizado</string>
    <string name="usuario_actualizacion_fallo">Fallo en la actualización de datos de usuario</string>
    <string name="usuario_guardado">USUARIO GUARDADO!</string>
    <string name="sesion_terminada">Sesión terminada.</string>
    <string name="sesion_terminar_fallo">No se pudo cerrar la sesión.</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="despedida">Hasta pronto</string>
    <string name="sin_red">Sin red</string>
    <string name="codigo_error">"Código de error: "</string>
    <string name="consulta_datos_error">Error al consultar datos</string>
    <string name="eliminar_error">Error al eliminar</string>
    <string name="maleta_eliminar_pregunta">Eliminar maleta?</string>
    <string name="maleta_eliminar_advertencia">La maleta se eliminará permanentemente</string>
    <string name="activas">ACTIVAS</string>
    <string name="cerradas">CERRADAS</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_articulo">Agregar Artículo</string>
    <string name="articulo_actualizar">Actualizar Artículo</string>
    <string name="duplicar_maleta_cerrada">Duplicar Maleta Cerrada</string>
    <string name="duplicar">Duplicar</string>
    <string name="maleta_agregar">Agregar Maleta</string>
    <string name="maleta_actualizar">Actualizar Maleta</string>
    <string name="maleta_articulos">"Artículos Maleta "</string>
    <string name="configuracion_personal">Configuración Personal</string>
    <string name="fecha_viaje_2">¿Cuándo vas a viajar?</string>
    <string name="cambio_contrasena">Cambiar Contraseña</string>
    <string name="introduce_nueva_contrasena">Introduce nueva contraseña</string>
    <string name="confirma_nueva_contrasena">Confirma la nueva contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="contrasena_actualizada">Contraseña Actualizada</string>
    <string name="contrasena_actualizada_error">Error al actualizar contraseña</string>
    <string name="largo_contrasena">La contraseña debe tener al menos seis caracteres...</string>
    <string name="advertencia_faltan_datos_maleta">Debe introducir todos los datos y una imagen de la maleta para poder continuar...</string>
    <string name="actualizar">Actualizar</string>
    <string name="mi_nombre">José Carlos Vázquez Míguez</string>
    <string name="ventana_principal">Ventana Principal</string>
    <string name="maletas">Maletas</string>


    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirma Contraseña</string>
    <string name="login_sign_in">Iniciar Sesión</string>
    <string name="login_sign_up">Autenticación</string>
    <string name="login_reset_password">Reestablecer mi contraseña</string>
    <string name="login_sign_in_google">Inicia sesión con Google</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_create_account">Crea una cuenta nueva</string>
    <string name="login_go_login">Volver a Iniciar Sesión</string>
    <string name="navigation_bottom_info">Información</string>
    <string name="options_menu_log_out">Cerrar Sesión</string>

    <string name="dialog_cancel">Cancelar</string>
    <string name="introducir_todos_datos">Debe introducir todos los datos para poder continuar...</string>
    <string name="borrado_storage">Borrado en el Storage</string>
    <string name="borrado_storage_error">Error al borrar en Storage</string>
    <string name="valor_no_numero">El valor introducido en cantidad no es numérico!!!</string>
    <string name="maletas_compartidas">Maletas Compartidas</string>
    <string name="contenido_clave">Debe contener al menos 1 numero, 1 minúscula, 1 mayúscula y 1 carácter especial</string>
    <string name="adevertencia_maleta_compartida">Ya tienes esta maleta compartida</string>
    <string name="maleta_compartida_correcto">Maleta compartida correctamente !</string>
    <string name="clave_maleta_introducir_obligatorio">Debe introducir una clave de maleta</string>
    <string name="maleta_compartida_ya">Maleta ya compartida!</string>
    <string name="borrar_articulo_no_permiso">No tiene permisos para borrar este artículo!</string>
        <string name="borrar_maleta_creador">Solo puede cerrar una maleta su creador !</string>
    <string name="maleta_compartida_cerrada">Maleta cerrada. No se puede compartir</string>
    <string name="maleta_compartida_nueva">NUEVA MALETA COMPARTIDA</string>
    <string name="maleta_compartida_cambio_datos">Solo puede modificar datos de una maleta compartida su dueño !</string>
    <string name="maleta_compartida_borrar_maleta">Solo puede borrar una maleta compartida su dueño !</string>
    <string name="clave_de_la_maleta">Clave de la maleta (8 caracteres)</string>


</resources>