<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewInfoAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre"
        android:textSize="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/nombre_del_articulo"
        app:layout_constraintEnd_toStartOf="@id/btnBorrar"
        app:layout_constraintStart_toEndOf="@+id/imageViewInfoAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCantidad"
        android:layout_width="136dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/cantidad"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/imageViewInfoAvatar"
        app:layout_constraintTop_toBottomOf="@id/nombre" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:width="0dp"
        android:height="0dp"
        android:text="@string/comprobado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="29dp" />

    <ImageButton
        android:id="@+id/btnBorrarArticulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>