<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/common_padding_default"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilClave"
        android:hint="@string/clave_de_la_maleta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etClave"
            android:maxLength="8"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:hint="@string/nombre_de_la_maleta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilClave"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFechaViaje"
        android:visibility="invisible"
        android:hint="@string/fecha_de_viaje"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <EditText
            android:id="@+id/etFechaViaje2"
            android:visibility="invisible"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageProductPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilFechaViaje"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray_100"
        app:layout_constraintDimensionRatio="16:9"
        >
    </ImageView>
    
    <ImageButton
        android:id="@+id/ibMaleta"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/imageProductPreview"
        app:layout_constraintEnd_toEndOf="@id/imageProductPreview"
        app:layout_constraintTop_toTopOf="@id/imageProductPreview"
        app:layout_constraintBottom_toBottomOf="@id/imageProductPreview"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_image_search">

    </ImageButton>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/imageProductPreview"
        app:layout_constraintTop_toBottomOf="@+id/imageProductPreview"
        app:layout_constraintVertical_bias="0.058"
        tools:progress="75"
        tools:visibility="visible">

    </com.google.android.material.progressindicator.LinearProgressIndicator>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@id/progress_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/progress_bar"
        app:layout_constraintTop_toBottomOf="@id/progress_bar"
        tools:text="@string/subiendo">

    </com.google.android.material.textview.MaterialTextView>

    <EditText
        android:id="@+id/etFechaViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_calendar_today_24"
        android:drawablePadding="30dp"
        android:hint="@string/fecha_viaje_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>